--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿
 <MudNavMenu>
-    <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькулятор режимов</MudNavLink>
+    <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькуляторы</MudNavLink>
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
     <MudNavLink Href="/converters" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Transform">Конвертеры</MudNavLink>
     <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MenuBook">База знаний</MudNavLink>
